<resources>
    <string name="app_name">Food App</string>
    <string name="text_name">Hi Binarian,</string>
    <string name="text_greeting">Mau makan apa hari ini?</string>
    <string name="text_rice">Nasi</string>
    <string name="text_mie">Mie</string>
    <string name="text_snack">Snack</string>
    <string name="text_drink">Minuman</string>
    <string name="txt_banner_desc">Untuk pemesanan lewat aplikasi</string>
    <string name="text_list_menu">List menu makanan</string>
    <string name="text_value_discount">30%</string>
    <string name="text_discount">Discount s/d</string>
    <string name="text_menu_1">Ayam Bakar</string>
    <string name="text_price_menu_1">Rp. 50.000</string>
    <string name="text_menu_2">Ayam Goreng</string>
    <string name="text_price_menu_2">Rp. 40.000</string>
    <string name="text_menu_3">Ayam Geprek</string>
    <string name="text_price_menu_3">Rp. 40.000</string>
    <string name="text_menu_4">Sate Usus Ayam</string>
    <string name="text_price_menu_4">Rp. 5.000</string>
    <string name="desc_icon_cart">icon cart</string>
    <string name="desc_icon_user">icon user</string>
    <string name="desc_icon_rice">icon rice</string>
    <string name="desc_icon_noodles">icon noodles</string>
    <string name="desc_icon_snack">icon snack</string>
    <string name="desc_icon_drink">icon drink</string>
    <string name="desc_backgoround_banner">backgoround banner</string>
    <string name="desc_icon_list">icon list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_add_to_cart">Tambah ke keranjang - Rp. %1d</string>
    <string name="text_header_cart">Keranjang</string>
    <string name="text_hint_notes">Catatan</string>
    <string name="text_header_profile">Profile</string>
    <string name="text_username">Rizal Muhaimin Nur</string>
    <string name="text_no_hp">089654338768</string>
    <string name="text_email">bitohur@gmail.com</string>
    <string name="text_title_email">Email</string>
    <string name="text_title_username">Username</string>
    <string name="text_title_no_telepon">No. Telepon</string>
    <string name="text_btn_add_to_cart">Tambah ke keranjang</string>
    <string name="text_title_location">Lokasi</string>
    <string name="text_total_price">180.000</string>
    <string name="text_order">Pesan</string>
    <string name="text_title_total_price">Total Harga</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_title_order_confirmation">Konfirmasi pemesanan</string>
    <string name="text_delivery_method">Metode Pemesanan</string>
    <string name="text_pick_up">Bawa Sendiri</string>
    <string name="text_delivery">Dikirim</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="text_cart_is_empty">Keranjang Kosong</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="total_quantity">x%s</string>

    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_total_price_order">Total Harga</string>
    <string name="text_action_bar_profile">Profile</string>
    <string name="text_okay">Okay</string>
</resources>