<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_greeting"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_header_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/desc_icon_cart"
                android:src="@drawable/ic_cart" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/desc_icon_user"
                android:src="@drawable/ic_user" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/cl_header">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:constraint_referenced_ids="cv_category_rice,cv_category_mie,cv_category_snack,cv_category_drink"
            app:flow_horizontalStyle="spread_inside"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_category_rice"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/primary_color_container"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/desc_icon_rice"
                    android:src="@drawable/ic_rice" />

                <TextView
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_rice"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_category_mie"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/primary_color_container"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/desc_icon_noodles"
                    android:src="@drawable/ic_mie" />

                <TextView
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_mie"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_category_snack"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/primary_color_container"
            app:cardCornerRadius="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/desc_icon_snack"
                    android:src="@drawable/ic_snack" />

                <TextView
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_snack"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_category_drink"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/primary_color_container"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/desc_icon_drink"
                    android:src="@drawable/ic_drink" />

                <TextView
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_drink"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/cl_category">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_banner"
            android:contentDescription="@string/desc_backgoround_banner"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_discount"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_value_discount"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_banner_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_banner">

        <TextView
            android:id="@+id/tv_list_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:text="@string/text_list_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_icon_list"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            app:constraint_referenced_ids="ll_menu_1,ll_menu_2,ll_menu_3,ll_menu_4"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalGap="16dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_menu" />

        <LinearLayout
            android:id="@+id/ll_menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_menu_1"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:src="@drawable/img_grilled_chicken" />

            <TextView
                android:id="@+id/tv_menu_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:text="@string/text_menu_1"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/text_price_menu_1"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_menu_2"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:src="@drawable/img_fried_chicken" />

            <TextView
                android:id="@+id/tv_menu_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:text="@string/text_menu_2"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/text_price_menu_2"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_menu_3"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:src="@drawable/img_smashed_chicken" />

            <TextView
                android:id="@+id/tv_menu_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:text="@string/text_menu_3"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/text_price_menu_3"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_menu_4"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:src="@drawable/img_satay" />

            <TextView
                android:id="@+id/tv_menu_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:text="@string/text_menu_4"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/text_price_menu_4"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>