<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_header_profile"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_action_bar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_profile_photo" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/cv_profile">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_title_username"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:text="@string/text_username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_title_email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:text="@string/text_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_title_no_telepon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:text="@string/text_no_hp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>